--- a/index.html
+++ b/index.html
@@ -3,9 +3,43 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <title>Food Network</title>
   </head>
   <body>
-    <h1>Food</h1>
+    <section class="top-header">
+      <div class="header-left">
+        <h1>
+          <span class="orange-color">Skip</span> The Diet, Just Eat Healthy With
+          Food Network
+        </h1>
+        <p>
+          Imagine you don't need a diet because we provide <br />
+          healthy and delicious food for you!
+        </p>
+        <a href="#">Order Food</a>
+      </div>
+      <div class="header-right">
+        <img src="images/export/Group 8425.png" alt="" />
+      </div>
+    </section>
+    <!--Header End-->
+    <section class="about-me">
+      <div class="about-left">
+        <img src="images/female/Person Image.png" alt="" />
+      </div>
+      <div class="about-right">
+        <h1>About Me</h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit,
+          voluptas ad laboriosam, itaque est eius recusandae molestiae laborum
+          consequatur quidem eaque culpa quod nisi, dolorem ex aperiam tempora
+          adipisci nemo!
+        </p>
+        <a href="#">contact me</a>
+      </div>
+    </section>
   </body>
 </html>
