--- a/index.html
+++ b/index.html
@@ -41,5 +41,61 @@
         <a href="#">contact me</a>
       </div>
     </section>
+    <!--About Me End-->
+    <section class="my-recipies">
+      <h1>My recipies</h1>
+      <p>
+        Lorem Ipsum is simply dummy text of the printing and typesetting
+        industry. <br />
+        Lorem Ipsum has been the industry's standard dummy text ever since the
+        1500s.
+      </p>
+      <div class="my-recipies-blog">
+        <div class="blog">
+          <img src="images/food/Project Cover1.jpg" alt="" />
+          <h2>Recipie Title</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus,
+            fermentum amet faucibus sed id nisi lectus at.
+          </p>
+        </div>
+        <div class="blog">
+          <img src="images/food/Project Cover1.jpg" alt="" />
+          <h2>Recipie Title</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus,
+            fermentum amet faucibus sed id nisi lectus at.
+          </p>
+        </div>
+        <div class="blog">
+          <img src="images/food/Project Cover1.jpg" alt="" />
+          <h2>Recipie Title</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus,
+            fermentum amet faucibus sed id nisi lectus at.
+          </p>
+        </div>
+      </div>
+    </section>
+    <!--About Me End-->
+    <section class="counter">
+      <div class="counter-section">
+        <h1>700k</h1>
+        <h3>Youtube Subscribe</h3>
+      </div>
+      <div class="counter-section">
+        <h1>700k</h1>
+        <h3>Youtube Subscribe</h3>
+      </div>
+      <div class="counter-section">
+        <h1>700k</h1>
+        <h3>Youtube Subscribe</h3>
+      </div>
+    </section>
+    <!--Counter End-->
+    <footer>
+      <h1><span class="orange-color">Food</span> Network</h1>
+      <p>Eat healthy to live healthy. Live healthy to live happy.</p>
+    </footer>
   </body>
 </html>
